@@ -18,6 +18,7 @@
 val compile_implementation_flambda :
     ?toplevel:(string -> bool) ->
     string ->
+    unit_name:Ident.t ->
     required_globals:Ident.Set.t ->
     backend:(module Backend_intf.S) ->
     ppf_dump:Format.formatter -> Flambda.program -> unit
@@ -25,6 +26,7 @@ val compile_implementation_flambda :
 val compile_implementation_clambda :
     ?toplevel:(string -> bool) ->
     string ->
+    unit_name:Ident.t ->
     ppf_dump:Format.formatter -> Lambda.program -> unit
 
 val compile_phrase :
