@@ -531,6 +531,8 @@ and to_clambda_set_of_closures t env
       body = to_clambda t env_body function_decl.body;
       dbg = function_decl.dbg;
       env = Some env_var;
+      human_name = Closure_id.base_name closure_id;
+      module_path = None;
     }
   in
   let funs = List.map to_clambda_function all_functions in
@@ -571,6 +573,8 @@ and to_clambda_closed_set_of_closures t env symbol
       body = to_clambda t env_body function_decl.body;
       dbg = function_decl.dbg;
       env = None;
+      human_name = Closure_id.base_name (Closure_id.wrap id);
+      module_path = None;
     }
   in
   let ufunct = List.map to_clambda_function functions in
