@@ -79,6 +79,9 @@ type fundecl =
     fun_body: instruction;
     fun_fast: bool;
     fun_dbg : Debuginfo.t;
+    fun_human_name : string;
+    fun_arity : int;
+    fun_module_path : Path.t option;
     fun_spacetime_shape : Mach.spacetime_shape option;
     fun_phantom_lets :
       (Backend_var.Provenance.t option * Mach.phantom_defining_expr)
