@@ -84,4 +84,9 @@ let fundecl ppf f =
       ""
     else
       " " ^ Debuginfo.to_string f.fun_dbg in
-  fprintf ppf "@[<v 2>%s:%s@,%a@]" f.fun_name dbg all_instr f.fun_body
+  let path =
+    match f.fun_module_path with
+    | None -> ""
+    | Some path -> "(" ^ Path.name path ^ ")"
+  in
+  fprintf ppf "@[<v 2>%s%s:%s@,%a@]" path f.fun_name dbg all_instr f.fun_body
