@@ -131,6 +131,11 @@ method fundecl f =
   ({fun_name = f.fun_name; fun_args = f.fun_args;
     fun_body = new_body; fun_codegen_options = f.fun_codegen_options;
     fun_dbg  = f.fun_dbg; fun_spacetime_shape = f.fun_spacetime_shape;
-    fun_phantom_lets = f.fun_phantom_lets},
+    fun_phantom_lets = f.fun_phantom_lets,
+    fun_dbg  = f.fun_dbg;
+    fun_human_name = f.fun_human_name;
+    fun_module_path = f.fun_module_path;
+    fun_spacetime_shape = f.fun_spacetime_shape;
+   },
    redo_regalloc)
 end
