@@ -486,6 +486,8 @@ let fundecl f =
     fun_body = new_body;
     fun_codegen_options = f.fun_codegen_options;
     fun_dbg  = f.fun_dbg;
+    fun_human_name = f.fun_human_name;
+    fun_module_path = f.fun_module_path;
     fun_spacetime_shape = f.fun_spacetime_shape;
     fun_phantom_lets = f.fun_phantom_lets;
   }
