@@ -53,7 +53,8 @@ let flambda i backend typed =
         ~backend
         ~module_initializer:lam)
     |> Asmgen.compile_implementation_flambda
-      i.outputprefix ~required_globals ~backend ~ppf_dump:i.ppf_dump;
+      i.outputprefix ~unit_name:module_ident ~required_globals ~backend
+        ~ppf_dump:i.ppf_dump;
     Compilenv.save_unit_info (cmx i))
 
 let clambda i typed =
@@ -68,7 +69,8 @@ let clambda i typed =
        { program with Lambda.code }
        |> print_if i.ppf_dump Clflags.dump_lambda Printlambda.program
        |> Asmgen.compile_implementation_clambda
-         i.outputprefix ~ppf_dump:i.ppf_dump;
+         i.outputprefix ~unit_name:program.Lambda.module_ident
+         ~ppf_dump:i.ppf_dump;
        Compilenv.save_unit_info (cmx i))
 
 let implementation ~backend =
