@@ -27,6 +27,8 @@ val unwrap_set : Set.t -> Variable.Set.t
 val in_compilation_unit : t -> Compilation_unit.t -> bool
 val get_compilation_unit : t -> Compilation_unit.t
 
+val base_name : t -> string
+
 val unique_name : t -> string
 
 val output_full : out_channel -> t -> unit
