@@ -455,13 +455,18 @@ Working version
 - GPR#2081: Mark [Iname_for_debugger] as an impure operation.
   (Mark Shinwell)
 
+- GPR#2084: Add [Dwarf_high] library.
+  (Mark Shinwell)
+
 - GPR#2085: Add [end_of_function_label] to the interface of [Emit.fundecl].
   (Mark Shinwell)
 
 - GPR#2086: Add [Available_filtering] pass.
   (Mark Shinwell)
 
-- GPR#2084: Add [Dwarf_high] library.
+- GPR#2087: Add human name, module path and arity fields variously throughout
+  types in the backend used for transporting function information.  Populate
+  human name and module path fields in [Closure].
   (Mark Shinwell)
 
 ### Bug fixes:
